--- a/index.html
+++ b/index.html
@@ -188,54 +188,51 @@
         </section> -->
 
         <div
-          id="carouselExampleIndicators"
-          class="carousel slide ml"
+          id="carouselExampleIndicators1"
+          class="carousel slide ml custom-carousel"
           data-ride="carousel"
         >
-          <ol class="carousel-indicators">
-            <li
-              data-target="#carouselExampleIndicators"
-              data-slide-to="0"
-              class="active"
-              class="gradCol2"
-            ></li>
-            <li
-              data-target="#carouselExampleIndicators"
-              data-slide-to="1"
-              class="gradCol2"
-            ></li>
-            <li
-              data-target="#carouselExampleIndicators"
-              data-slide-to="2"
-              class="gradcCol2"
-            ></li>
-          </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                class="d-block w-100"
+                class="d-block w-100 bnr"
                 src="images/banner/bnr1.png"
                 alt="First slide"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
+                class="d-block w-100 bnr"
                 src="images/banner/bn2.png"
                 alt="Second slide"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
+                class="d-block w-100 bnr"
                 src="images/banner/bnr3.png"
                 alt="Third slide"
               />
             </div>
           </div>
+          <ol class="carousel-indicators">
+            <li
+              data-target="#carouselExampleIndicators1"
+              data-slide-to="0"
+              class="active"
+            ></li>
+            <li
+              data-target="#carouselExampleIndicators1"
+              data-slide-to="1"
+            ></li>
+            <li
+              data-target="#carouselExampleIndicators1"
+              data-slide-to="2"
+            ></li>
+          </ol>
           <a
             class="carousel-control-prev"
-            href="#carouselExampleIndicators"
+            href="#carouselExampleIndicators1"
             role="button"
             data-slide="prev"
           >
@@ -244,7 +241,7 @@
           </a>
           <a
             class="carousel-control-next"
-            href="#carouselExampleIndicators"
+            href="#carouselExampleIndicators1"
             role="button"
             data-slide="next"
           >
@@ -288,7 +285,7 @@
               </p>
             </div>
             <div style="flex: 1">
-              <p style="color: white; text-align: left">
+              <p style="color: white; text-align: right">
                 Experience cutting-edge Omen laptops, participate in thrilling
                 competitions, and explore HP's expertly designed courses to
                 level up your career. Join us to connect with like-minded
