resolved: merge conflict

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                           <img
                             src="images/lg2.png"
                             alt=""
-                            width="100"
+                            width="140"
                             style="margin-left: 2rem"
                           />
                         </div>
@@ -147,13 +147,13 @@
                           <img
                             src="images/lg1.png"
                             alt=""
-                            width="100"
+                            width="140"
                             style="margin-right: 2rem"
                           />
                         </div>
                       </div>
                       <div class="phoneLogo">
-                        <img src="images/Omen-Spark.png" alt="" width="100" />
+                        <img src="images/Omen-Spark.png" alt="" width="140" />
                       </div>
                     </div>
                   </div>
@@ -244,25 +244,30 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                class="d-block w-100 bnr"
-                src="images/banner/bnr1.png"
-                alt="First slide"
-              />
+              <a href="#contacts">
+                <img
+                  class="d-block w-100 bnr"
+                  src="images/banner/bnr1.png"
+                  alt="First slide"
+              /></a>
             </div>
             <div class="carousel-item">
-              <img
-                class="d-block w-100 bnr"
-                src="images/banner/bn2.png"
-                alt="Second slide"
-              />
+              <a href="#contacts">
+                <img
+                  class="d-block w-100 bnr"
+                  src="images/banner/bn2.png"
+                  alt="Second slide"
+                />
+              </a>
             </div>
             <div class="carousel-item">
-              <img
-                class="d-block w-100 bnr"
-                src="images/banner/bnr3.png"
-                alt="Third slide"
-              />
+              <a href="#contacts">
+                <img
+                  class="d-block w-100 bnr"
+                  src="images/banner/bnr3.png"
+                  alt="Third slide"
+                />
+              </a>
             </div>
           </div>
           <ol class="carousel-indicators">
@@ -528,6 +533,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -564,6 +570,38 @@
             </div>
             <div class="carousel-item">
               <a
+                href="https://maps.app.goo.gl/zCtAevXV21yQCSjYA?g_st=com.google.maps.preview.copy
+ 
+            "
+                target="_blank"
+              >
+                <img
+                  class="d-block w-100"
+                  src="images/delhi3.png"
+                  alt="Second slide"
+                />
+              </a>
+              <div class="overlay">
+                <div class="carousel-caption">
+                  <p style="flex-direction: column">
+                    <span
+                      ><a
+                        class="icon fa fa-map-marker"
+                        style="color: white !important; margin-right: 5px"
+                        href="#"
+                      ></a
+                      >Delhi</span
+                    ><br />
+                    <small style="font-size: 10px"
+                      >Police Station, 54/8, Desh Bandhu Gupta Rd, Block 56,
+                      Karol Bagh, New Delhi, Delhi, 110005</small
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a
                 href="https://g.co/kgs/oi6PPKZ
  
             "
@@ -572,7 +610,7 @@
                 <img
                   class="d-block w-100"
                   src="images/pune-location.png"
-                  alt="Second slide"
+                  alt="Third slide"
                 />
               </a>
               <div class="overlay">
@@ -603,7 +641,7 @@
                 <img
                   class="d-block w-100"
                   src="images/kolkata.png"
-                  alt="Third slide"
+                  alt="Fourth slide"
                 />
               </a>
               <div class="overlay">
@@ -627,15 +665,15 @@
             </div>
             <div class="carousel-item">
               <a
-                href="https://g.co/kgs/5vMnXK1
+                href="https://maps.app.goo.gl/boVb4Yaf2sRxhNqc7?g_st=com.google.maps.preview.copy
  
             "
                 target="_blank"
               >
                 <img
                   class="d-block w-100"
-                  src="images/bangalore.png"
-                  alt="Fourth slide"
+                  src="images/bangalore2.png"
+                  alt="Fifth slide"
                 />
               </a>
               <div class="overlay">
@@ -650,8 +688,8 @@
                       >Bengaluru</span
                     ><br />
                     <small style="font-size: 10px">
-                      10, OTC Road, Sadar Patrappa Rd, Bengaluru, Karnataka
-                      560002</small
+                      Ground Floor First Floor, Shop No.16 & 17, Giri Apartment,
+                      JP Nagar Phase 2, Bengaluru, Karnataka 560078</small
                     >
                   </p>
                 </div>
@@ -702,11 +740,12 @@
                     <p>Omen 9W1C9PA</p>
                   </div>
                   <div class="flip-card-back">
-                    <p style="padding: 3rem">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cumque similique temporibus eveniet impedit velit ex dicta
-                      repellendus labore, ea ratione incidunt nihil eum
-                      voluptatum enim perferendis beatae amet, illo magni.
+                    <p style="padding: 2rem">
+                      Core i9-13900HX | 16GB DDR5 2DM 5600 | 1TB PCIe 4x4 |
+                      NVIDIA GeForce RTX 4060 8GB VRAM | 16.1 FHD Antiglare Lw
+                      BluLt IPS 300 nits 165Hz Narrow Border flat | OST W11H6
+                      PLS SL IPPP | Shadow Black FF - 1080p TNR PVCY ST | WARR
+                      1/1/0 A/P | HP 1y 3d Onsite Bundle High NB SVC
                     </p>
                   </div>
                 </div>
@@ -727,11 +766,12 @@
                     <p>Omen 9X649PA</p>
                   </div>
                   <div class="flip-card-back">
-                    <p style="padding: 3rem">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cumque similique temporibus eveniet impedit velit ex dicta
-                      repellendus labore, ea ratione incidunt nihil eum
-                      voluptatum enim perferendis beatae amet, illo magni.
+                    <p style="padding: 2rem">
+                      Ryzen 7-7840HS | 16GB DDR5 2DM 5600 | 1TB PCIe value |
+                      NVIDIA GeForce RTX 4050 6GB VRAM | 16.1 FHD Antiglare Lw
+                      BluLt IPS 300 nits 165Hz Narrow Border flat | OST W11H6
+                      PLS SL IPPP | Shadow Black DF - 1080p TNR PVCY ST | WARR
+                      1/1/0 A/P | HP 1y 3d Onsite Bundle High NB SVC
                     </p>
                   </div>
                 </div>
@@ -752,11 +792,12 @@
                     <p>Omen A0EH4PA</p>
                   </div>
                   <div class="flip-card-back">
-                    <p style="padding: 3rem">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cumque similique temporibus eveniet impedit velit ex dicta
-                      repellendus labore, ea ratione incidunt nihil eum
-                      voluptatum enim perferendis beatae amet, illo magni.
+                    <p style="padding: 2rem">
+                      Core i7-14650HX | 16GB DDR5 2DM 5600 | 1TB PCIe Gen4 |
+                      NVIDIA GeForce RTX 4060 8GB VRAM | 16.1 FHD Antiglare IPS
+                      300 nits 144Hz flat | OST W11H6 PLS SL IPPP | Shadow Black
+                      FF - 1080p TNR HyperX PVCY ST | WARR 1/1/0 A/P | HP 1y 3d
+                      Onsite Bundle High NB SVC
                     </p>
                   </div>
                 </div>
@@ -777,11 +818,12 @@
                     <p>Omen A17KGPA</p>
                   </div>
                   <div class="flip-card-back">
-                    <p style="padding: 3rem">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cumque similique temporibus eveniet impedit velit ex dicta
-                      repellendus labore, ea ratione incidunt nihil eum
-                      voluptatum enim perferendis beatae amet, illo magni.
+                    <p style="padding: 2rem">
+                      Ryzen 9-7940HS | 16GB DDR5 2DM 5600 | 1TB PCIe Gen4 |
+                      NVIDIA GeForce RTX 4070 8GB VRAM | 16.1 FHD Antiglare Lw
+                      BluLt IPS 300 nits 165Hz Narrow Border flat | OST W11H6
+                      PLS SL IPPP | Shadow Black FF - 1080p TNR PVCY ST | WARR
+                      1/1/0 A/P | HP 1y 3d Onsite Bundle High NB SVC
                     </p>
                   </div>
                 </div>
